trunk/Archive2/7e/93bd2d8c104193/output
main.cpp:1:1: error: C++ requires a type specifier for all declarations
cameraZ = eyePos - lookAt;
^~~~~~~
main.cpp:1:11: error: use of undeclared identifier 'eyePos'
cameraZ = eyePos - lookAt;
          ^
main.cpp:1:20: error: use of undeclared identifier 'lookAt'
cameraZ = eyePos - lookAt;
                   ^
main.cpp:2:1: error: unknown type name 'cameraZ'
cameraZ.normalize();
^
main.cpp:2:8: error: cannot use dot operator on a type
cameraZ.normalize();
       ^
main.cpp:3:1: error: C++ requires a type specifier for all declarations
cameraX = up.crossProduct(cameraZ);
^~~~~~~
main.cpp:3:11: error: use of undeclared identifier 'up'
cameraX = up.crossProduct(cameraZ);
          ^
main.cpp:4:1: error: unknown type name 'cameraX'
cameraX.normalize();
^
main.cpp:4:8: error: cannot use dot operator on a type
cameraX.normalize();
       ^
main.cpp:5:1: error: C++ requires a type specifier for all declarations
cameraY = cameraZ.crossProduct(cameraX);
^~~~~~~
10 errors generated.
