trunk/Archive2/7e/93bd2d8c104193/main.cpp
cameraZ = eyePos - lookAt;
cameraZ.normalize();
cameraX = up.crossProduct(cameraZ);
cameraX.normalize();
cameraY = cameraZ.crossProduct(cameraX);